fix:Removed cart, adjusted shop npbuttons size on mobile

--- a/styles/header.css
+++ b/styles/header.css
@@ -123,7 +123,7 @@ h1 {
 .menu-bar {
   height: 60px;
   border-radius: 5px;
-  background-color: rgba(0, 0, 128, 0.557);
+  /* background-color: rgba(0, 0, 128, 0.557); */
 }
 
 .menu-btn {
