--- a/styles/new-arrivals.css
+++ b/styles/new-arrivals.css
@@ -44,6 +44,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  /* height: 400px; */
+
 }
 .new-arrivals-item:hover {
   background-color: #f5f5f5bd;
@@ -82,7 +84,7 @@
 }
 .new-arrivals-item-img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   margin-bottom: 20px;
   border-radius: 10px;
   border: 1px solid #eeeeee;
